--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,12 +7,29 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=15
 REFRESH_TOKEN_EXPIRE_DAYS=7
 
-# MinIO/S3 Configuration
-S3_ENDPOINT_URL=http://localhost:9000
-S3_ACCESS_KEY=minio_admin
-S3_SECRET_KEY=minio_password
+# Backblaze B2 / S3 Configuration
+# Setup instructions:
+# 1. Create Backblaze account: https://www.backblaze.com/b2/sign-up.html
+# 2. Create Application Key: https://secure.backblaze.com/app_keys.htm
+#    - Click "Add a New Application Key"
+#    - Name: "payment-proof-system"
+#    - Allow access to: Your bucket name
+#    - Type of Access: Read and Write
+#    - Copy the keyID and applicationKey
+# 3. Create B2 Bucket: https://secure.backblaze.com/b2_buckets.htm
+#    - Click "Create a Bucket"
+#    - Bucket name: Must be globally unique (e.g., "yourname-payment-receipts")
+#    - Files in Bucket: Private
+#    - Copy the bucket region (e.g., us-west-004)
+# 4. Update values below with your credentials
+
+# Endpoint format: https://s3.<region>.backblazeb2.com
+# Available regions: us-west-001, us-west-002, us-west-004, us-east-005, eu-central-003
+S3_ENDPOINT_URL=https://s3.us-west-004.backblazeb2.com
+S3_ACCESS_KEY=your-backblaze-keyID
+S3_SECRET_KEY=your-backblaze-applicationKey
 S3_BUCKET_NAME=payment-receipts
-S3_REGION=us-east-1
+S3_REGION=us-west-004
 
 # File Upload Configuration
 MAX_UPLOAD_SIZE=10485760
